# mixs-6-2-release-candidate

./: .env.template  .gitignore  GSC_MIxS_6.yaml  GSC_MIxS_6.yaml.schema.json  GSC_MIxS_6_usage_populated_no_blank_cols.tsv  Makefile  README.md  README.md.bak  mkdocs.yml  project.Makefile  pyproject.toml  structured-pattern-settings.yaml  usage_template_populated_no_blank_cols.tsv
GSC-excel-harmonized-repaired/: mixs_6_2_rc.repaired.tsv
config/: .~lock.classes-schemasheet.tsv#  .~lock.mixs_tables_stage_modifications.tsv#  classes-schemasheet.tsv  jit_xlsx_fixes_in_tsv.tsv  linkml-stage-mixs-modifications.yaml  linkml_stage_mixs_modifications.yaml  mixs-stringsers-expvals-to-linkml-ranges-patterns.tsv  mixs-tables-stage-modifications.tsv  mixs_string_ser_and_exp_val_to_linkml_range_and_pattern.tsv  mixs_tables_stage_modifications.tsv  proposed_attribute_replacements_schema.yaml  string_ser_exp_val_to_range_pattern.tsv
conflict-reports/: conflict-repair-report.tsv  mixs_6_2_rc.ID.Def.conflicts.post.tsv  mixs_6_2_rc.ID.Item.conflicts.post.tsv  mixs_6_2_rc.ID.Occurrence.conflicts.post.tsv  mixs_6_2_rc.ID.Section.conflicts.pre.tsv  mixs_6_2_rc.ID.expval.conflicts.post.tsv  mixs_6_2_rc.ID.expval.conflicts.pre.tsv  mixs_6_2_rc.ID.prefunit.conflicts.post.tsv  mixs_6_2_rc.ID.valsyn.conflicts.post.tsv  mixs_6_2_rc.ID.valsyn.conflicts.pre.tsv  mixs_6_2_rc.SCN.Example.conflicts.post.tsv  mixs_6_2_rc.SCN.Item.conflicts.post.tsv
conflict_reports/: conflict_repair_report.tsv  mixs_6_2_proposal.ID.Def.conflicts.post.tsv  mixs_6_2_proposal.ID.Def.conflicts.pre.tsv  mixs_6_2_proposal.ID.Item.conflicts.post.tsv  mixs_6_2_proposal.ID.Occurrence.conflicts.post.tsv  mixs_6_2_proposal.ID.prefunit.conflicts.post.tsv  mixs_6_2_proposal.SCN.Item.conflicts.post.tsv  mixs_v6.xlsx.ID.Item.conflicts.pre.tsv  mixs_v6.xlsx.ID.Occurrence.conflicts.pre.tsv  mixs_v6.xlsx.ID.SCN.conflicts.post.tsv  mixs_v6.xlsx.ID.prefunit.conflicts.post.tsv  mixs_v6.xlsx.ID.prefunit.conflicts.pre.tsv
converted-data/: MimsSoil-example.csv  MimsSoil-example.tsv  MimsSoil-example.ttl  MixsCompliantData-MimsSoil-example.json  MixsCompliantData-MimsSoil-example.ttl  MixsCompliantData-MimsSoil-example.yaml  data-conversion-report.md
converted_data/: MimsSoil_example.csv  MimsSoil_example.ttl
curated-data/: ExhaustiveTestClassCollection-wrapped-example-data.yaml  MimsSoil-example.yaml
curated_data/: ExhaustiveTestClassCollection-wrapped-example-data.yaml  unwrapped_curated_data_for_slot_coverage_check.yaml
(+1052 files in other folders)
